<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <artifactId>java</artifactId>
    <groupId>cn.ivfzhou</groupId>
    <version>1.0.0</version>
    <packaging>pom</packaging>

    <modelVersion>4.0.0</modelVersion>
    <name>java</name>
    <url>https://www.ivfzhou.cn</url>

    <modules>
        <module>javaee</module>
        <module>mybatis</module>
        <module>log4j</module>
        <module>spring</module>
        <module>javase</module>
        <module>aop</module>
        <module>logback</module>
        <module>springmvc</module>
        <module>springboot</module>
        <module>springcloud</module>
        <module>shiro</module>
        <module>rabbitmq</module>
        <module>nacos</module>
        <module>redis</module>
        <module>rocketmq</module>
        <module>zookeeper</module>
        <module>dubbo</module>
        <module>apksigner</module>
        <module>jarsigner</module>
        <module>agentscope</module>
        <module>reactor</module>
    </modules>

    <properties>
        <!-- 源码文件的编码。被 maven-compiler-plugin 使用。 -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <!-- 报告输出内容的编码。指定 Maven 生成项目报告、站点文档时输出文件的字符编码。 -->
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <java.version>25</java.version>

        <my.pom.filter.value>my parent pom filter value</my.pom.filter.value>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.15.0</version>
                <configuration>
                    <release>${java.version}</release>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <distributionManagement>
        <repository>
            <id>nexus-upload</id>
            <url>http://ivfzhoudebian:8081/repository/maven-releases</url>
        </repository>
        <snapshotRepository>
            <id>nexus-upload</id>
            <url>http://ivfzhoudebian:8081/repository/maven-snapshots</url>
        </snapshotRepository>
    </distributionManagement>

</project>
